# usrp-bridge-discord

./: .env.example  Cargo.toml  README.md
src/: commands.rs  main.rs
src/commands/: receiver.rs  transmitter.rs
