[package]
name = "usrp-bridge-discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dasp_signal = { version = "0.11.0" }
dasp_interpolate = { version = "0.11.0", features = [ "linear" ] }
songbird = "0.3.2"
serenity = { version = "0.11.5", features = [ "voice" ] }
tokio = { version = "1.28.0", features = [ "full" ] }
chrono = "0.4.24"
dotenv = "0.15.0"
byteorder = "1.4.3"